Textfield alignment fix.

--- a/app/assets/stylesheets/_site.scss
+++ b/app/assets/stylesheets/_site.scss
@@ -283,7 +283,6 @@ input[type="color"],
     width: 100%;
     display: inline-block;
     margin-bottom: 7px;
-    line-height: 20px;
     vertical-align: middle;
     border-radius: 4px;
     &:focus {
